--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <body>
 
-    <h1>Welcome</h1>
+    <h1>Welcome air </h1>
     <p>
-     first website deploy
+     first website deployment
     </p>
 </body>
 
